<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jikexueyuan.mediaplayerdemo.MainActivity">

    <item
        android:id="@+id/menu_theme"
        android:orderInCategory="100"
        android:title="@string/theme"/>
    <item
        android:id="@+id/menu_playMode"
        android:orderInCategory="100"
        android:title="@string/playmode"/>
    <item android:id="@+id/menu_sleep"
        android:orderInCategory="100"
        android:title="@string/sleep_mode"/>
    <item android:id="@+id/menu_equalizer"
        android:orderInCategory="100"
        android:title="@string/equalizer"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_quit"
        android:orderInCategory="100"
        android:title="@string/quit"/>
</menu>